n26Bono/force-app/main/default/objects/Product_Table__c/Product_Table__c.object-meta.xml
<CustomObject>
    <label>Product Table</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Product Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>