n26Bono/force-app/main/default/objects/Product_Table__c/fields/ATM_Fee_in_Other_Currency__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_in_Other_Currency__c</fullName>
    <description>Created by BMONDAL on 13th November 2022 for the purpose of showing ATM Fee details in all currencies available.</description>
    <label>ATM Fee in Other Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>