n26Bono/force-app/main/default/objects/Product_Table__c/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <description>Created by BMONDAL on 13th November 2022 for the purpose of showing Card Replacement Cost per standard product available.</description>
    <label>Card Replacement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>