n26Bono/force-app/main/default/objects/Product_Table__c/fields/Cost_Per_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Calendar_Month__c</fullName>
    <description>Created by BMONDAL on 13th November 2022 for the purpose of showing Cost Per Calendar Month details for the plans</description>
    <label>Cost Per Calendar Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>