n26Bono/force-app/main/default/objects/Product_Table__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Created by BMONDAL on 13th November 2022. To enlist products available.</description>
    <label>Product Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Name</valueSetName>
    </valueSet>
</CustomField>