n26Bono/force-app/main/default/objects/Product_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Country__c</columns>
    <columns>Cost_Per_Calendar_Month__c</columns>
    <columns>ATM_Fee_in_Other_Currency__c</columns>
    <columns>Card_Replacement_Cost__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>